# PolicyLens

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: main.py
scripts/: download_sample_pdfs.py  ingest_policy.py  init_neo4j.py  run_mcp_server.py  smoke_test.py
src/: config.py
src/graph/: __init__.py  client.py  queries.py  schema.py
src/ingestion/: graph_builder.py  normalizer.py  pdf_loader.py  vlm_extractor.py
src/mcp_servers/: __init__.py  change_detection_server.py  document_retrieval_server.py  policy_graph_server.py  reference_data_server.py
src/models/: __init__.py  graph.py  policy.py
src/reference/: __init__.py  icd10.py  rxnorm.py
src/vector_store/: __init__.py  excerpt_store.py
tests/: conftest.py  test_api.py  test_excerpt_store.py  test_extraction.py  test_graph_builder.py  test_graph_queries.py  test_mcp_servers.py  test_models.py  test_reference.py
tests/fixtures/: sample_extraction_response.json
ui/: streamlit_app.py
